--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>gson</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-codegen-cli</artifactId>
+      <version>2.4.28</version>
+    </dependency>
   </dependencies>
 
 </project>
