--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
       <artifactId>gson</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.swagger.parser.v3</groupId>
+      <artifactId>swagger-parser</artifactId>
+      <version>2.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aaronhe</groupId>
+      <artifactId>threetenbp-gson-adapter</artifactId>
+      <version>1.0.2</version>
+    </dependency>
   </dependencies>
 
 </project>
